--- a/docs/課題/laravel/課題2.md
+++ b/docs/課題/laravel/課題2.md
@@ -89,7 +89,7 @@
 
 ・作成するテーブルには id（主キー）、office_id（外部キー）、 text（文字列）の2つのカラムがあれば良いです。
 
-・equipments テーブルにもモデルクラスを定義してください。
+・memos テーブルにもモデルクラスを定義してください。
 
 ・offices テーブルと memos テーブルを 1対多 の関係で結んでください（ヒント：モデルクラス）
 ```
